# Protein-Diffusion

./: README.md  ROADMAP.md  Vision.md  __init__.py  pyproject.toml  requirements.txt  setup.py
Notes/: CA.txt  Day1-2-3.txt  Day4.txt  Day5.txt  Day6.txt  W2D1.txt  day7.txt  normaliseFunct.txt
config/: default.yaml
data/: dataset.py  preprocess.py
data/processed/: 1CRN.npy
demo/: app.py  quality_dashboard.py
eval/: metrics.py
eval/rmsd_cuda/: alphafold_eval.py  rmsd.cpp  rmsd_kernel.cu
models/: diffusion_backbone.py  egnn.py  sequence_conditioner.py
models/modules/: __init__.py
notebook/: demo.ipynb
proteindiffusion.egg-info/: PKG-INFO  SOURCES.txt
proteindiffusion/eval/rmsd_cuda/: __init__.py  rmsd.cpp  rmsd_kernel.cu
proteindiffusion/models/: diffusion_backbone.py  sequence_conditioner.py
proteindiffusion/models/modules/: layers.py
proteindiffusion/utils/: geometry.py
scripts/: angles_inpaint.py  forward_test.py  generate_protein.py  sample_backbone.py  test_dataloader.py  test_geometry.py  test_metrics.py  train.backbone.py  train_backbone.py  train_sequence.py
utils/: geometry.py  pdb_io.py  visualization.py
